--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-.idea
-/target
-**/target/**
-logs/
-.g8
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+/.bsp
