--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,46 +1,84 @@
-play.http.secret.key = "changeme"
+//play.http.secret.key = "changeme"
+//play.modules.enabled += "scalikejdbc.PlayModule"
+//play.crypto.secret = "jcg"
+//play.http.errorHandler = play.api.http.JsonHttpErrorHandler
+//
+//db {
+//  default {
+//      driver = "com.mysql.cj.jdbc.Driver"
+//      url =  "jdbc:mysql://localhost:3306/bbs?characterEncoding=UTF-8&useSSL=false"
+//      username = "root"
+//      password = "Anhnghia23"
+//      validateOnMigrate = false
+//      initOnMigrate = true
+//      auto = true
+//      poolInitialSize=5
+//      poolMaxSize=7
+//      poolConnectionTimeoutMillis=1000
+//      poolValidationQuery="select 1 as one"
+//    }
+//}
+
+//scalikejdbc {
+//  global {
+//    loggingSQLAndTime {
+//        enabled = true
+//        singleLineMode = true
+//        logLevel = debug
+//        warningEnabled = true
+//        warningThresholdMillis = 1000
+//        warningLogLevel = warn
+//        printUnprocessedStackTrace = false
+//        stackTraceDepth = 15
+//    }
+//  }
+//}
+
+//play {
+//    filters {
+//        cors.pathPrefixes = ["/"]
+//        cors.allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+//        cors.preflightMaxAge = 3600
+//        cors.exposedHeaders = ["Content-Disposition"]
+//        enabled += "play.filters.cors.CORSFilter"
+//        disabled += "play.filters.csrf.CSRFFilter"
+//    }
+//}
+
+
+db.default.driver="com.mysql.cj.jdbc.Driver"
+db.default.url="jdbc:mysql://localhost:3306/bbs?useSSL=false"
+db.default.username="root"
+db.default.password="Anhnghia23"
+
+# ScalikeJDBC original configuration
+#db.default.poolInitialSize=10
+#db.default.poolMaxSize=10
+#db.default.poolValidationQuery=
+
+scalikejdbc.global.loggingSQLAndTime.enabled=true
+scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
+scalikejdbc.global.loggingSQLAndTime.logLevel=debug
+scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
+scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=5
+scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
+
 play.modules.enabled += "scalikejdbc.PlayModule"
-play.crypto.secret = "jcg"
+play.modules.enabled += "application.src.main.scala.bbs.application.feature.service.module.BBSModule"
+# scalikejdbc.PlayModule doesn't depend on Play's DBModule
+#play.modules.disabled += "play.api.db.DBModule"
+
 play.http.errorHandler = play.api.http.JsonHttpErrorHandler
 
-db {
-  default {
-      driver = "com.mysql.cj.jdbc.Driver"
-      url =  "jdbc:mysql://localhost:3306/bbs?characterEncoding=UTF-8&useSSL=false"
-      username = "root"
-      password = "Anhnghia23"
-      validateOnMigrate = false
-      initOnMigrate = true
-      auto = true
-      poolInitialSize=5
-      poolMaxSize=7
-      poolConnectionTimeoutMillis=1000
-      poolValidationQuery="select 1 as one"
-    }
+#config filters
+play.filters.hosts {
+    allowed = ["127.0.0.1", "localhost","10.0.1.177","10.0.1.178"]
 }
 
-scalikejdbc {
-  global {
-    loggingSQLAndTime {
-        enabled = true
-        singleLineMode = true
-        logLevel = debug
-        warningEnabled = true
-        warningThresholdMillis = 1000
-        warningLogLevel = warn
-        printUnprocessedStackTrace = false
-        stackTraceDepth = 15
-    }
-  }
-}
+play.filters.cors.pathPrefixes = ["/"]
+play.filters.cors.allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+play.filters.cors.preflightMaxAge = 3600
+play.filters.cors.exposedHeaders = ["Content-Disposition"]
 
-play {
-    filters {
-        cors.pathPrefixes = ["/"]
-        cors.allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-        cors.preflightMaxAge = 3600
-        cors.exposedHeaders = ["Content-Disposition"]
-        enabled += "play.filters.cors.CORSFilter"
-        disabled += "play.filters.csrf.CSRFFilter"
-    }
-}
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.disabled += "play.filters.csrf.CSRFFilter"
